Created method to retrieve a book by ID and its Unit test